Fixed broken CSS Grid

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,22 +1,18 @@
 /* CSS Reset*/
 * {
   padding: 0;
-  margin: 0; }
-
-html,
-body {
-  height: 100vh; }
-
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: linear-gradient(35deg, #8afcfc, #fd4040) no-repeat;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 0;
   box-sizing: border-box; }
+
+body {
+  background: url("https://images.fineartamerica.com/images-medium-large-5/brown-wooden-table-background-anilakkus.jpg") no-repeat center/cover;
+  height: 100vh;
+  font-family: "Open Sans", "Arial Narrow", Arial, sans-serif; }
 
 /* Akai Wrapper */
 .akai-container {
+  margin: 0 auto;
+  margin-top: 20vh;
   display: grid;
   grid-template-columns: repeat(5, 130px);
   grid-template-rows: minmax(185px, auto);
@@ -61,14 +57,21 @@ span {
 
 /* MIDI Pads Section*/
 .pads-container {
-  display: grid;
   grid-column: 2 / 4;
   grid-row: 1 / 1;
-  grid-template-columns: repeat(4, 65px);
-  grid-template-rows: minmax(60px, auto);
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
   height: 185px; }
+
+.top-pads,
+.bottom-pads {
+  width: 100%;
+  flex: 0 0 50%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center; }
 
 .pad {
   height: 55px;
@@ -110,7 +113,7 @@ span {
   border-radius: 0px 0px 4px 4px;
   box-shadow: 1px 1px 2px #000;
   color: #000;
-  font-size: 12px;
+  font-weight: 700;
   line-height: 25px;
   outline: none;
   cursor: pointer; }
@@ -131,9 +134,10 @@ span {
   border-radius: 0 0 2px 2px;
   color: #fff;
   font-size: 10px;
+  font-weight: 700;
   outline: none;
   cursor: pointer; }
-  .black-key:hover, .black-key:active {
+  .black-key:active {
     opacity: 0.9; }
   .black-key:nth-child(5n + 5) {
     margin-right: 50px; }
@@ -141,19 +145,3 @@ span {
     margin-left: 35px; }
   .black-key:nth-of-type(2) {
     margin-right: 55px; }
-
-/* Legend */
-.legend {
-  position: relative;
-  align-self: center;
-  left: 25px;
-  height: 250px;
-  width: 300px;
-  background: white;
-  border: 1px solid #000;
-  border-radius: 5px;
-  text-align: center;
-  font-weight: bold;
-  opacity: 0.5; }
-  .legend p {
-    font-size: 16px; }
